# ProductReviewPulse

./: .env.example  .gitignore  check_data.py  check_doc.py  check_requests.py  check_runs.py  check_specific.py  debug_state.py  fix_db.py  main.py  products.yaml  project_review.md  pulse.sqlite  pyproject.toml  reset_for_publish.py
.github/workflows/: ci.yml  weekly-pulse.yml
Docs/: Architecture.md  ProblemStatement.md  Weekly_Pulse_Report.md  code_updates_log.md  context.md  deliverablesPlan.md  edge_cases_resolution.md  implementationPlan.md  phase3_evaluation.md  phase4_evaluation.md  phase_6_summary.md  phase_7_summary.md  project_review_2.md  reviews_sample.csv  runbook.md  summary.md
agent/: __init__.py  __main__.py  config.py  embeddings.py  storage.py  summarization.py  summarization_models.py
agent/clustering/: __init__.py  embedder.py  keyphrases.py  pipeline.py
agent/ingestion/: __init__.py  appstore.py  filters.py  models.py  pii.py  playstore.py
agent/mcp_client/: __init__.py  (+3 more)
data/: .gitkeep
frontend/: index.html  style.css
frontend-next/: package.json
mcp_server/: auth.py  docs_tool.py  gmail_tool.py  server.py
scratch/: analyze_json.py  extract_reviews_v2.py  find_script.py  groww_json.json  groww_reviews.html  list_mcp_tools.py  lookup.json  reset_run.py  test_appstore.py  test_appstore2.py  test_appstore3.py  test_appstore4.py  test_appstore5.py  test_appstore6.py  test_appstore7.py  test_extract.py  validate_schema.py  verify_phase3.py
templates/: doc_section.schema.json  email.html.j2  email.txt.j2
tests/: test_smoke.py
(+22 files in other folders)
